# chatGPT-web

./: .gitignore  Dockerfile  PROXY.md  README.md  docker-compose.yml  start.sh
.github/workflows/: docker-publish.yml
api/: api.py  app.py  model.py  pyproject.toml  requirements.txt
web/: .env.development  .env.production  .eslintrc  auto-imports.d.ts  components.d.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
web/src/: App.vue  main.ts  style.css  types.d.ts
web/src/api/: api.ts  index.ts
web/src/components/: message.vue  setting.vue
web/src/composables/: messages.ts  setting.ts
